# DataTransferKit

./: .clang-format  .clang-format-ignore  .cproject  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .jenkins  .mailmap  .project  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  LICENSE  PackagesList.cmake  README  README.md  README.rst  TPLsList.cmake  Version.cmake  _config.yml  about.md  configure.ac  coupler_config  download.md  faq.md  index.html  setup_nemesis
autodoc/: configure.ac  mainpage.dcc.in
autodoc/html/: denovo.fig  footer.html.in  header.html.in
core/: CMakeLists.txt  Coupler_DataField.hpp  Coupler_DataField.t.hpp  Coupler_DataSource.hpp  Coupler_DataTarget.hpp  Coupler_Data_Field.hpp  Coupler_Data_Field.t.hpp  Coupler_Data_Source.hpp  Coupler_Data_Target.hpp  config.h.in
core/cmake/: Dependencies.cmake
core/example/: CMakeLists.txt
core/src/: CMakeLists.txt  Coupler_BoundingBox.hpp  Coupler_BoundingBox.i.hpp  Coupler_BoundingBox_Def.hpp  Coupler_CommIndexer.hpp  Coupler_CommIndexer_Def.hpp  Coupler_CopyOperator.hpp  Coupler_CopyOperator_Def.hpp  Coupler_DataField.hpp  Coupler_DataField.t.hpp  Coupler_DataField_Def.hpp  Coupler_DataSource.hpp  Coupler_DataSource_Def.hpp  Coupler_DataTarget.hpp  Coupler_Point.hpp  Coupler_SerializationTraits.hpp  DTK_BoundingBox_Def.hpp  DTK_CopyOperator_Def.hpp  DTK_CoreTypes.hpp  DTK_DataSource.hpp  DTK_DataTarget.hpp  DTK_Element.hpp  DTK_ElementTraits.hpp  DTK_Exception.cpp  DTK_FieldTraits.hpp  DTK_MeshTraits.hpp  DTK_Node.hpp  DTK_NodeTraits.hpp  DTK_SerializationTraits.hpp  DataTransferKit_BoundingBox.hpp  DataTransferKit_BoundingBox.i.hpp  DataTransferKit_CommIndexer.hpp  DataTransferKit_CommIndexer_Def.hpp  DataTransferKit_CopyOperator.hpp  DataTransferKit_CopyOperator_Def.hpp  DataTransferKit_DataField.hpp  DataTransferKit_DataField_Def.hpp  DataTransferKit_DataSource.hpp  DataTransferKit_DataSource_Def.hpp  DataTransferKit_DataTarget.hpp  (+6 more)
core/test/: CMakeLists.txt  tstAdvanced_Transfer.cpp  tstBoundingBox.cpp  tstCommIndexer.cpp  tstCopyOperator.cpp  tstDataField.cpp  tstDataSource.cpp  tstData_Field.cpp  tstInterfaces.cpp  tstPoint.cpp  tstZero_Point_Proc.cpp
docs/: .gitignore  CMakeLists.txt
docs/doxygen/: CMakeLists.txt  Doxyfile.in
docs/ext/: scope.py
docs/source/: api.rst  coding_guidelines.rst  conf.py  developer_tools.rst  index.rst  install.rst  overview.rst  requirements.readthedocs.txt
example/peaks_transfer/: CMakeLists.txt  Makefile  Physics_A.cc  Physics_A.hh  Physics_B.cc  TE_Physics_A.cc  TE_Physics_A.hh  TE_Physics_B.cc  TE_Physics_B.hh
field/src/: CMakeLists.txt  DTK_ConsistentEvaluation.hpp  DTK_ConsistentEvaluation_def.hpp  DTK_ConsistentInterpolation.hpp  DTK_ConsistentInterpolation_def.hpp  DTK_DataSource.hpp  DTK_DataSource_def.hpp  DTK_DataTarget.hpp  DTK_FieldEvaluator.hpp  DTK_FieldManager.hpp  DTK_FieldManager_def.hpp  DTK_FieldTools.hpp  DTK_FieldTools_def.hpp  DTK_FieldTraits.hpp  DTK_FieldVersion.cpp  DTK_FieldVersion.hpp  DTK_MeshAdapter.hpp  DTK_MeshTraitsFieldAdapter.hpp  DTK_TransferOperator.hpp
map/src/: CMakeLists.txt  DTK_ConsistentInterpolation.hpp  DTK_ConsistentInterpolation_def.hpp  DTK_DataSource.hpp  DTK_DataSource_def.hpp  DTK_DataTarget.hpp  DTK_DataTarget_def.hpp  DTK_FieldEvaluator.hpp  DTK_FieldTraits.hpp  DTK_Map.hpp  DTK_Map3dConsistentInterpolation.hpp  DTK_MapFactory.cpp  DTK_MapFactory.hpp  DTK_MapVersion.cpp  DTK_MapVersion.hpp  DTK_SharedDomainMap.hpp  DTK_SharedDomainMap_def.hpp  DTK_TargetManager.hpp  DTK_TransferOperator.hpp  DTK_TransferOperator_def.hpp  DTK_TransferVersion.cpp
mesh/src/: CMakeLists.txt  DTK_BoundingBox.cpp  DTK_BoundingBox.hpp  DTK_CellTopologyFactory.cpp  DTK_CellTopologyFactory.hpp  DTK_KDTree.hpp  DTK_KDTree_def.hpp  DTK_Mesh.cpp  DTK_Mesh.hpp  DTK_MeshContainer.hpp  DTK_MeshManager.hpp  DTK_MeshManager_def.hpp  DTK_MeshTools.hpp  DTK_MeshTools_def.hpp  DTK_MeshTraits.hpp  DTK_MeshTypes.hpp  DTK_Mesh_def.hpp  DTK_RCB.cpp  DTK_RCB.hpp  DTK_RCB_def.hpp  DTK_Rendezvous.hpp  DTK_RendezvousMesh.hpp  DTK_RendezvousMesh_def.hpp  DTK_Rendezvous_def.hpp  DTK_SerializationTraits.hpp  DTK_TopologyTools.cpp  DTK_TopologyTools.hpp
src/: CMakeLists.txt  Coupler_DataField.t.hpp  Coupler_DataTarget.hpp  Coupler_Point.hpp  DTK_AKDTree.hpp  DTK_AKDTree_impl.hpp  DTK_Assertion.cpp  DTK_Assertion.hpp  DTK_AsynchronousMap.hpp  DTK_AsynchronousMap_def.hpp  DTK_BoundingBox.cpp  DTK_BoundingBox.hpp  DTK_Box.cpp  DTK_Box.hpp  DTK_BufferCommunicator.hpp  DTK_BufferCommunicator_impl.hpp  DTK_BufferDataTraits.hpp  DTK_BuhmannBasis.hpp  DTK_BuhmannBasis_impl.hpp  DTK_CellTopologyFactory.cpp  DTK_CellTopologyFactory.hpp  DTK_CenterDistributor_impl.hpp  DTK_CloudDomain.hpp  DTK_CloudDomain_impl.hpp  DTK_CloudSearch.hpp  DTK_CloudSearch_impl.hpp  DTK_CommDataBuffer.hpp  DTK_CommDataBuffer_impl.hpp  DTK_CommIndexer.cpp  DTK_CommIndexer.hpp  DTK_CommTools.cpp  DTK_CommTools.hpp  DTK_Cylinder.cpp  DTK_Cylinder.hpp  DTK_DBC.cpp  DTK_DBC.hpp  DTK_DataBuffer.hpp  DTK_DataBuffer_impl.hpp  DTK_Distributor.cpp  DTK_Distributor.hpp  (+89 more)
src/core/: CMakeLists.txt  Coupler_Data_Field.hpp  Coupler_Data_Field.t.hpp  Coupler_Data_Source.hpp  Coupler_Data_Target.hpp  Data_Transfer_Manager.cc  Data_Transfer_Manager.hh  Data_Transfer_Manager.i.hh  Data_Transfer_Manager.t.hh  Field.cc  Field.hh  Field.i.hh  Field_DB.hh  Field_DB.i.hh  Field_DB.t.hh  LG_Indexer.hh  LG_Indexer.i.hh  Mapper.cc  Mapper.hh  Mapper.i.hh  Mapper.t.hh  Mapper_Tpetra.hh  Mapper_Tpetra.t.hh  Message_Buffer.cc  Message_Buffer.hh  Message_Buffer.i.hh  Message_Buffer.t.hh  Messenger.cc  Messenger.hh  Messenger.i.hh  Packing_Utils.hh  Packing_Utils.i.hh  Physics.cc  Physics.hh  Physics.i.hh  Physics.t.hh  Transfer_Data_Field.cc  Transfer_Data_Field.hh  Transfer_Data_Field.t.hh  Transfer_Data_Source.hh  (+11 more)
src/coupler/: Base_Map.hh  CMakeLists.txt  Coupler.hh  Coupler.i.hh  Coupler.t.hh  CouplingType.hh  CouplingType.i.hh  LG_Indexer.hh  LG_Indexer.i.hh  Point_Map.hh  STAR_Data.hh  STAR_File_IO.hh  STAR_File_IO.pt.cc  STAR_File_IO.t.hh  config.h.in  config.m4  configure.ac
src/field/: Field.hh  (+7 more)
(+1165 files in other folders)
